# cyrillicJapaneseInput

./: CLAUDE.md  README.md
.github/workflows/: android-tests.yml  ios-tests.yml  rust-core-tests.yml
docs/: Android開発計画書.md  cyrillicJapaneseInput.xlsx  iOS開発環境コスト比較.md  iOS開発計画書.md  アプリ設計書.md  要件定義書.md
mobile/android/: .gitignore  README.md  README_IMPLEMENTATION.md  build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/core/: build.gradle.kts
mobile/android/ime/: build.gradle.kts
mobile/iOS/: .gitignore  README.md  XCODE_SETUP.md
mobile/iOS/CyrillicIME/: CyrillicIMEApp.swift
mobile/iOS/CyrillicIME/ViewModels/: SettingsViewModel.swift
mobile/iOS/CyrillicIME/Views/: SettingsView.swift
mobile/iOS/CyrillicIMETests/: ModelTests.swift  ProfileManagerTests.swift  RustCoreFFITests.swift
mobile/iOS/CyrillicKeyboard/: KeyboardViewController.swift
mobile/iOS/CyrillicKeyboard/Engine/: ProfileManager.swift  RustCoreFFI.swift
mobile/iOS/Shared/Models/: ConversionResult.swift  (+1 more)
profiles/: .gitignore  japaneseKanaEngine.json
profiles/schemas/: schema_srb_v1.json  schema_ukr_v1.json
rust_core/: Cargo.toml  README.md  TESTING.md  build_android.sh  build_ios.sh
rust_core/benches/: conversion_benchmark.rs
rust_core/src/: engine.rs  ffi.rs  jni.rs  lib.rs  models.rs
rust_core/tests/: concurrency_tests.rs  engine_tests.rs  error_handling_tests.rs  integration_real_data.rs  unit_engine.rs  unit_models.rs
terraform/aws-macos-ec2/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
(+24 files in other folders)
