[package]
name = "cyrillic_ime_core"
version = "0.1.0"
edition = "2021"
authors = ["Cyrillic IME Project"]

[lib]
name = "cyrillic_ime_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

# JNI support for Android
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
